--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -2,10 +2,14 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">We've got what you need!</h2>
+                <h2 class="section-heading">About Me</h2>
                 <hr class="light">
-                <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+                <p class="text-faded">I am that person who has a zest for new knowledge and development of mankind. I am having the great privilage of studing Computer Science and Engineering in India's most premiere class of engineering institutes, Indian Institute of Technology (Palakkad).
+
+Nature never fails to make me wonder about her beauty and charm. Maybe this is what makes Machine Learning interesting for me, the way we are trying to imitate nature and the way this imitation brings light to our life. The more we get to know her, the more we progress and yet she remains an ocean of secrets. Exploring Machine Learning makes me appreciate how complex our brains are, which even the most complex mathematical functions cannot simulate.
+</p><p>
+Another topic that never fails to catch my attention is the economics of developing countries. The strive to progress, in a sustainable way, is something that needs a lot of contemplation.</p>
+                <!-- <a href="#" class="btn btn-default btn-xl">Get Started!</a> -->
             </div>
         </div>
     </div>
