--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,10 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Your Favorite Source of Free Bootstrap Themes</h1>
+            <h1>Axel James</h1>
             <hr>
-            <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+            <p>Third year Computer Science and Enginnering Undergraduate</p>
+            <p>INDIAN INSTITUTE OF TECHNOLOGY, PALAKKAD</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
     </div>
