--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,8 +1,17 @@
   <aside class="bg-dark">
       <div class="container text-center">
           <div class="call-to-action">
-              <h2>Free Download at Start Bootstrap!</h2>
-              <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
+          	<h2>Download Resume</h2>
+        <a href="/resources/Axel_James_Resume.pdf" target="_blank" class="btn btn-default btn-xl wow btnmar" >Resume</a>
+              <h2>Download Transcripts</h2>
+              <div class="btn btn-default btn-xl wow tada" id="transcripts_btn" data-toggle="collapse" data-target="#transcripts">Download</div>
+              <div id="transcripts" class="collapse">
+              	<a href="/resources/111501034_1.pdf" target="_blank" class="btn btn-default btn-xl wow btnmar" >Semester 1</a>
+              	<a href="/resources/111501034_2.pdf" target="_blank" class="btn btn-default btn-xl wow btnmar" >Semester 2</a>
+              	<a href="/resources/111501034_3.pdf" target="_blank" class="btn btn-default btn-xl wow btnmar" >Semester 3</a>
+              	<a href="#" class="btn btn-default btn-xl wow btnmar" >Semester 4</a>
+              	<a href="#" class="btn btn-default btn-xl wow btnmar" >Semester 5</a>
+              </div>
           </div>
       </div>
   </aside>
