--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,6 +1,9 @@
 <section class="no-padding" id="portfolio">
     <div class="container-fluid">
-        <div class="row no-gutter">
+
+
+
+        <!-- <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
                     <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
@@ -91,6 +94,6 @@
                     </div>
                 </a>
             </div>
-        </div>
+        </div> -->
     </div>
 </section>
