--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,15 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/main.css" type="text/css">
+    <script type="text/javascript">
+         $('#transcript_1').hide(); //Initially form wil be hidden.
 
+         $('#transcripts_btn').click(function() {
+           $('#transcript_1').show();//Form shows on button click
+
+           });
+
+    </script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
