--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,13 +18,13 @@
                     <a class="page-scroll" href="#about">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#services">Services</a>
+                    <a class="page-scroll" href="#services">Education</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#skills">Skills</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#portfolio">Portfolio</a>
+                    <a class="page-scroll" href="#portfolio">Downloads</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
