--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -9,8 +9,8 @@
               	<a href="/resources/111501034_1.pdf" target="_blank" class="btn btn-default btn-xl wow btnmar" >Semester 1</a>
               	<a href="/resources/111501034_2.pdf" target="_blank" class="btn btn-default btn-xl wow btnmar" >Semester 2</a>
               	<a href="/resources/111501034_3.pdf" target="_blank" class="btn btn-default btn-xl wow btnmar" >Semester 3</a>
-              	<a href="#" class="btn btn-default btn-xl wow btnmar" >Semester 4</a>
-              	<a href="#" class="btn btn-default btn-xl wow btnmar" >Semester 5</a>
+              	<a href="/resources/111501034_4.pdf" target="_blank" class="btn btn-default btn-xl wow btnmar" >Semester 4</a>
+              	<a href="/resources/111501034_5.pdf" target="_blank" class="btn btn-default btn-xl wow btnmar" >Semester 5</a>
               </div>
           </div>
       </div>
