Updated para styles

--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -4,10 +4,10 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">About Me</h2>
                 <hr class="light">
-                <p class="text-faded">I am that person who has a zest for new knowledge and development of mankind. I am having the great privilage of studing Computer Science and Engineering in India's most premiere class of engineering institutes, Indian Institute of Technology (Palakkad).
+                <p class="text-faded" style="text-align:justify">I am that person who has a zest for new knowledge and development of mankind. I am having the great privilage of studing Computer Science and Engineering in India's most premiere class of engineering institutes, Indian Institute of Technology (Palakkad).
 
 Nature never fails to make me wonder about her beauty and charm. Maybe this is what makes Machine Learning interesting for me, the way we are trying to imitate nature and the way this imitation brings light to our life. The more we get to know her, the more we progress and yet she remains an ocean of secrets. Exploring Machine Learning makes me appreciate how complex our brains are, which even the most complex mathematical functions cannot simulate.
-</p><p>
+</p><p class="text-faded" style="text-align:justify">
 Another topic that never fails to catch my attention is the economics of developing countries. The strive to progress, in a sustainable way, is something that needs a lot of contemplation.</p>
                 <!-- <a href="#" class="btn btn-default btn-xl">Get Started!</a> -->
             </div>
