--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,8 @@
         <div class="header-content-inner">
             <h1>Axel James</h1>
             <hr>
-            <p>Third year Computer Science and Enginnering Undergraduate</p>
-            <p>INDIAN INSTITUTE OF TECHNOLOGY, PALAKKAD</p>
+            <p>First year Computer Science and Enginnering Masters Student</p>
+            <p>INDIAN INSTITUTE OF TECHNOLOGY, BOMBAY</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
     </div>
